# IA-JUR-DESENVOLVIMENTO

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  perguntas_teste.md  prepare_github.py  pyproject.toml  requirements.txt  resposta_agentes.txt  simple_main.py
config/: simple_config.py
docs/: .env.template  CONFIGURACAO_ATUAL_AGENTE.md  DEPLOY_RAILWAY_COMPLETO.md  ESTADO_ATUAL_SISTEMA.md  GLOSSARIO_TECNICO_IMPLEMENTADO.md  GUIA_USO_RAPIDO.md  IMPLEMENTACAO_IA_JUR_COMPLETA.md  INDICE_DEPLOY_RAILWAY.md  INDICE_DOCUMENTACAO.md  PLANO_ROLLBACK_ESTADO_ATUAL.md  PLANO_ROLLBACK_IA_JUR_DETALHADO.md  PROMPT_AGENTE_PESQUISADOR.md  RESUMO_EXECUTIVO_DEPLOY_RAILWAY.md  RESUMO_EXECUTIVO_IA_JUR.md  RESUMO_FINAL_DOCUMENTACAO_DEPLOY.md  STATUS_FINAL_DEPLOY_RAILWAY.md
em_producao/: research_agent.py
examples/: .env.example  README.md
origem/: 00745.009229.2020.58_e.txt  00784.002342.2020.46_e.txt  100_2023_50612.001436.2023.91_e.txt  101_2023_50612.001649.2020.70_e.txt  102_2023_50612.001855.2021.61_e.txt  103_2023_50612.002368.2022.04_e.txt  104_2023_50613.002355.2022.17_e.txt  105_2023_50613.002390.2022.36_e.txt  106_2023_50614.000644.2019.76_e.txt  107_2023_50614.001083.2023.17_e.txt  108_2023_50614.001282.2021.55_e.txt  109_2023_50614.001729.2023.58_e.txt  10_2021_50001.004127.2021.07_e.txt  10_2022_19975.123129.2020.58.txt  10_2023_50622.003412.2019.71_e.txt  10_2024_50623.001969.2022.62_e.txt  10_2025_50609.001610.2024.35_e.txt  110_2023_50614.001769.2023.08_e.txt  111_2023_50614.002752.2022.89_e.txt  112_2023_50615.001918.2022.30_e.txt  (+216 more)
(+37 files in other folders)
